--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.5.2",
+    "angular-route": "^1.5.2",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "mongoose": "^4.4.8"
