--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.2",
-    "angular-route": "^1.5.2",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
-    "mongoose": "^4.4.8"
+    "fs": "0.0.2",
+    "mongoose": "^4.4.8",
+    "path": "^0.12.7",
+    "sesh": "^0.1.0"
   }
 }
