--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "angular": "^1.5.2",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "eyes": "^0.1.8",
     "fs": "0.0.2",
     "mongoose": "^4.4.8",
     "path": "^0.12.7",
