Added files via upload

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "fs": "0.0.2",
     "mongoose": "^4.4.8",
     "path": "^0.12.7",
-    "sesh": "^0.1.0"
+    "sesh": "^0.1.0",
+    "shortid": "^2.2.4"
   }
 }
