Added image upload... Still working on reloading image

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "fs": "0.0.2",
     "mongoose": "^4.4.8",
     "mongoose-bcrypt": "^1.2.3",
+    "multer": "^1.1.0",
     "path": "^0.12.7",
     "sesh": "^0.1.0",
     "shortid": "^2.2.4"
