--- a/package.json
+++ b/package.json
@@ -33,11 +33,19 @@
     "express": "^4.13.4",
     "eyes": "^0.1.8",
     "fs": "0.0.2",
+    "jsdom": "^8.3.0",
+    "mocha": "^2.4.5",
     "mongoose": "^4.4.8",
     "mongoose-bcrypt": "^1.2.3",
     "multer": "^1.1.0",
     "path": "^0.12.7",
+    "rewire": "^2.5.1",
     "sesh": "^0.1.0",
     "shortid": "^2.2.4"
+  },
+  "devDependencies": {
+    "jsdom": "8.3.0",
+    "jsdom-global": "1.7.0",
+    "mocha-jsdom": "^1.1.0"
   }
 }
